[project]
name = "bafang"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hdbscan>=0.8.40",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "obspy>=1.4.2",
    "pycwt>=0.5.0b0",
    "pyqt6>=6.10.2",
    "pywavelets>=1.9.0",
    "scikit-learn>=1.6.0",
    "scipy>=1.17.0",
    "setuptools==79.0.0",
    "torch>=2.10.0",
]
